<resources>
    <string name="app_name">tilitili</string>
    <string name="action_settings">Settings</string>

    <string name="thu_logo">THU-Logo</string>


    <string name="main_page">首页</string>
    <string name="plates_page">板块</string>
    <string name="activity_page">动态</string>
    <string name="mine_page">我的</string>

    <string name="username">用户名/邮箱</string>
    <string name="password">密码</string>
    <string name="forget_pw">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login">登录</string>

    <string name="reset_pw">修改密码</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="new_pw">新密码</string>
    <string name="confirm_pw">确认密码</string>
    <string name="token_error">登录失效，请重新登录</string>
    <string name="loading">正在加载中…</string>
    <string name="logining">正在登录</string>
    <string name="updating">正在更新</string>
    <string name="submitting">正在发布</string>
    <string name="registering">正在注册，请稍候</string>
    <string name="register_success">注册成功</string>
    <string name="login_error">用户名或密码错误，请重新登录</string>
    <string name="to_follow">关注</string>
    <string name="is_following">已关注</string>
    <string name="chat">聊天</string>

    <string name="my_upload">我的投稿</string>
    <string name="my_history">历史记录</string>
    <string name="my_star">我的收藏</string>
    <string name="my_following">我的关注</string>
    <string name="nickname">昵称</string>

    <string name="register_username_hint">用户名(用于登录）</string>
    <string name="register_email_hint">清华邮箱</string>
    <string name="register_password_hint">密码</string>
    <string name="register_duplicate_password_hint">再次输入密码</string>
    <string name="register_captcha_hint">输入验证码</string>
    <string name="register_to_login_hint">已有帐号？返回登录</string>

    <string name="login_username_hint">用户名/邮箱</string>
    <string name="login_password_hint">密码</string>

    <string name="reset_password_username_hint">用户名</string>
    <string name="reset_password_verify_code_hint">验证码</string>
    <string name="reset_password_new_password_hint">新密码</string>
    <string name="reset_password_confirm_password_hint">确认密码</string>

    <string name="label_cancel_dislike">撤消</string>
    <string name="choose_cover_hint">选择封面：</string>
    <string name="user_profile_avatar_hint">头像</string>
    <string name="user_profile_nickname_hint">昵称</string>
    <string name="user_profile_nickname_default">清华大学</string>
    <string name="user_profile_joinat_hint">注册日期</string>
    <string name="user_profile_joinat_default">2020年6月1日</string>
    <string name="user_profile_bio_hint">个性签名</string>
    <string name="user_profile_bio_default">人生无处不青山</string>
    <string name="user_profile_department_hint">院系</string>
    <string name="user_profile_department_default">未知</string>
    <string name="user_profile_organization_hint">社团</string>
    <string name="user_profile_organization_default">未知</string>
    <string name="user_profile_history">历史记录</string>
    <string name="user_favorite">我的收藏</string>
    <string name="user_profile_read_history">查看历史记录</string>
    <string name="user_profile_follow_list">我的关注</string>
    <string name="user_profile_favorite_list">我的收藏</string>
    <string name="user_profile_chat_list">我的聊天</string>
    <string name="user_profile_submission_upload_hint">投稿</string>
    <string name="user_profile_all_submission_hint">查看历史稿件</string>
    <string name="user_profile_change">修改个人信息</string>
    <string name="home_search_result">搜索结果</string>
    <string name="home_search">请输入搜索内容</string>

    <string name="update_avatar">新头像</string>
    <string name="update_nickname">昵称</string>
    <string name="update_department">院系/专业</string>
    <string name="update_bio">个性签名</string>
    <string name="confirm_update_info">确认更新</string>
    <string name="user_profile_username_hint">用户名</string>
    <string name="editor_commit_hint">确认发布</string>
    <string name="editor_exit_hint">退出</string>
    <string name="editor_choose_plate_hint">选择板块：</string>

    <string name="home_hot_order">最热</string>
    <string name="home_new_order">最新</string>
    <string name="comment">评论区</string>
    <string name="user">用户</string>
    <string name="chat_list">聊天列表</string>
    <string name="to_comment">评论</string>
    <string name="to_message">输入消息</string>
    <string name="send">发送</string>
    <string name="logout_hint">退出登录</string>

    <string-array name="departments">
        <item>软件学院</item>
        <item>计算机系</item>
        <item>社科学院</item>
        <item>土木工程</item>
        <item>建筑学院</item>
        <item>电子系</item>
    </string-array>
</resources>
