<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="0dp"
        android:paddingRight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/thu_logo"
            android:layout_gravity="center"
            android:src="@drawable/thu_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/reset_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/reset_password_username_hint"
                android:hint="@string/reset_password_username_hint"
                android:inputType="textPersonName"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/reset_password_new_password_hint"
                android:hint="@string/reset_password_new_password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/reset_password_dup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/reset_password_confirm_password_hint"
                android:hint="@string/reset_password_confirm_password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="121dp"
            android:layout_height="52dp"
            android:layout_marginStart="145dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="145dp"
            android:backgroundTint="#82318E"
            android:text="@string/reset_pw"
            android:textColor="#FFFFFF"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>